--- a/hackaton.ipynb
+++ b/hackaton.ipynb
@@ -35,13 +35,14 @@
     "%matplotlib  inline\n",
     "\n",
     "\n",
+    "\n",
     "# Импорт основных библиотек машинного обучения\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "# dfsdf\n",
+    "# dfsdf вва\n",
     "\n",
     "# Импорт библиотек моделей машинного обучения\n",
     "from sklearn.linear_model import LogisticRegression\n",
