--- a/hackaton.ipynb
+++ b/hackaton.ipynb
@@ -42,7 +42,7 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "# dfsdf вва 333\n",
+    "# dfsdf вва 333 333\n",
     "\n",
     "# Импорт библиотек моделей машинного обучения аапап\n",
     "from sklearn.linear_model import LogisticRegression\n",
